--- a/requirements.txt
+++ b/requirements.txt
@@ -16,22 +16,22 @@ certifi==2025.1.31
     # via requests
 charset-normalizer==3.4.1
     # via requests
-click==8.1.8
-    # via uvicorn
 colorama==0.4.6
-    # via
-    #   click
-    #   tqdm
+    # via tqdm
 fastapi==0.115.11
     # via -r requirements.in
-h11==0.14.0
-    # via uvicorn
+filelock==3.18.0
+    # via torch
+fsspec==2025.3.0
+    # via torch
 idna==3.10
     # via
     #   anyio
     #   requests
 imageio==2.37.0
     # via scikit-image
+jinja2==3.1.6
+    # via torch
 joblib==1.4.2
     # via mtcnn
 jsonschema==4.23.0
@@ -44,15 +44,20 @@ llvmlite==0.44.0
     # via numba
 lz4==4.4.3
     # via mtcnn
+markupsafe==3.0.2
+    # via jinja2
+mpmath==1.3.0
+    # via sympy
 mtcnn==1.0.0
     # via -r requirements.in
 networkx==3.4.2
-    # via scikit-image
+    # via
+    #   scikit-image
+    #   torch
 numba==0.61.0
     # via pymatting
 numpy==2.1.3
     # via
-    #   -r requirements.in
     #   imageio
     #   numba
     #   opencv-python
@@ -73,7 +78,6 @@ packaging==24.2
     #   scikit-image
 pillow==11.1.0
     # via
-    #   -r requirements.in
     #   imageio
     #   pillow-heif
     #   pymatting
@@ -86,15 +90,11 @@ platformdirs==4.3.7
 pooch==1.8.2
     # via rembg
 pydantic==2.10.6
-    # via
-    #   -r requirements.in
-    #   fastapi
+    # via fastapi
 pydantic-core==2.27.2
     # via pydantic
 pymatting==1.1.13
     # via rembg
-python-multipart==0.0.20
-    # via -r requirements.in
 referencing==0.36.2
     # via
     #   jsonschema
@@ -122,8 +122,12 @@ starlette==0.46.1
     # via fastapi
 stripe==11.6.0
     # via -r requirements.in
+sympy==1.13.1
+    # via torch
 tifffile==2025.3.13
     # via scikit-image
+torch==2.6.0
+    # via -r requirements.in
 tqdm==4.67.1
     # via rembg
 typing-extensions==4.12.2
@@ -134,7 +138,6 @@ typing-extensions==4.12.2
     #   pydantic-core
     #   referencing
     #   stripe
+    #   torch
 urllib3==2.3.0
     # via requests
-uvicorn==0.34.0
-    # via -r requirements.in
