--- a/requirements.txt
+++ b/requirements.txt
@@ -16,14 +16,20 @@ certifi==2025.1.31
     # via requests
 charset-normalizer==3.4.1
     # via requests
+click==8.1.8
+    # via uvicorn
 colorama==0.4.6
-    # via tqdm
+    # via
+    #   click
+    #   tqdm
 fastapi==0.115.11
     # via -r requirements.in
 filelock==3.18.0
     # via torch
 fsspec==2025.3.0
     # via torch
+h11==0.14.0
+    # via uvicorn
 idna==3.10
     # via
     #   anyio
@@ -58,6 +64,7 @@ numba==0.61.0
     # via pymatting
 numpy==2.1.3
     # via
+    #   -r requirements.in
     #   imageio
     #   numba
     #   opencv-python
@@ -141,3 +148,5 @@ typing-extensions==4.12.2
     #   torch
 urllib3==2.3.0
     # via requests
+uvicorn==0.34.0
+    # via -r requirements.in
