--- a/requirements.txt
+++ b/requirements.txt
@@ -22,14 +22,20 @@ colorama==0.4.6
     # via
     #   click
     #   tqdm
+coloredlogs==15.0.1
+    # via onnxruntime
 fastapi==0.115.11
     # via -r requirements.in
 filelock==3.18.0
     # via torch
+flatbuffers==25.2.10
+    # via onnxruntime
 fsspec==2025.3.0
     # via torch
 h11==0.14.0
     # via uvicorn
+humanfriendly==10.0
+    # via coloredlogs
 idna==3.10
     # via
     #   anyio
@@ -67,6 +73,7 @@ numpy==2.1.3
     #   -r requirements.in
     #   imageio
     #   numba
+    #   onnxruntime
     #   opencv-python
     #   opencv-python-headless
     #   pymatting
@@ -74,6 +81,8 @@ numpy==2.1.3
     #   scikit-image
     #   scipy
     #   tifffile
+onnxruntime==1.20.0
+    # via -r requirements.in
 opencv-python==4.11.0.86
     # via -r requirements.in
 opencv-python-headless==4.11.0.86
@@ -81,6 +90,7 @@ opencv-python-headless==4.11.0.86
 packaging==24.2
     # via
     #   lazy-loader
+    #   onnxruntime
     #   pooch
     #   scikit-image
 pillow==11.1.0
@@ -96,12 +106,16 @@ platformdirs==4.3.7
     # via pooch
 pooch==1.8.2
     # via rembg
+protobuf==6.30.1
+    # via onnxruntime
 pydantic==2.10.6
     # via fastapi
 pydantic-core==2.27.2
     # via pydantic
 pymatting==1.1.13
     # via rembg
+pyreadline3==3.5.4
+    # via humanfriendly
 referencing==0.36.2
     # via
     #   jsonschema
@@ -130,7 +144,9 @@ starlette==0.46.1
 stripe==11.6.0
     # via -r requirements.in
 sympy==1.13.1
-    # via torch
+    # via
+    #   onnxruntime
+    #   torch
 tifffile==2025.3.13
     # via scikit-image
 torch==2.6.0
