--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,17 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
+absl-py==2.2.0
+    # via
+    #   keras
+    #   tensorboard
+    #   tensorflow
 annotated-types==0.7.0
     # via pydantic
 anyio==4.9.0
     # via starlette
+astunparse==1.6.3
+    # via tensorflow
 attrs==25.3.0
     # via
     #   jsonschema
@@ -29,11 +36,25 @@ fastapi==0.115.11
 filelock==3.18.0
     # via torch
 flatbuffers==25.2.10
-    # via onnxruntime
+    # via
+    #   onnxruntime
+    #   tensorflow
 fsspec==2025.3.0
     # via torch
+gast==0.6.0
+    # via tensorflow
+google-pasta==0.2.0
+    # via tensorflow
+grpcio==1.71.0
+    # via
+    #   tensorboard
+    #   tensorflow
 h11==0.14.0
     # via uvicorn
+h5py==3.13.0
+    # via
+    #   keras
+    #   tensorflow
 humanfriendly==10.0
     # via coloredlogs
 idna==3.10
@@ -50,18 +71,36 @@ jsonschema==4.23.0
     # via rembg
 jsonschema-specifications==2024.10.1
     # via jsonschema
+keras==3.9.0
+    # via tensorflow
 lazy-loader==0.4
     # via scikit-image
+libclang==18.1.1
+    # via tensorflow
 llvmlite==0.44.0
     # via numba
 lz4==4.4.3
     # via mtcnn
+markdown==3.7
+    # via tensorboard
+markdown-it-py==3.0.0
+    # via rich
 markupsafe==3.0.2
-    # via jinja2
+    # via
+    #   jinja2
+    #   werkzeug
+mdurl==0.1.2
+    # via markdown-it-py
+ml-dtypes==0.5.1
+    # via
+    #   keras
+    #   tensorflow
 mpmath==1.3.0
     # via sympy
 mtcnn==1.0.0
     # via -r requirements.in
+namex==0.0.8
+    # via keras
 networkx==3.4.2
     # via
     #   scikit-image
@@ -71,7 +110,10 @@ numba==0.61.0
 numpy==2.1.3
     # via
     #   -r requirements.in
+    #   h5py
     #   imageio
+    #   keras
+    #   ml-dtypes
     #   numba
     #   onnxruntime
     #   opencv-python
@@ -80,6 +122,8 @@ numpy==2.1.3
     #   rembg
     #   scikit-image
     #   scipy
+    #   tensorboard
+    #   tensorflow
     #   tifffile
 onnxruntime==1.20.0
     # via -r requirements.in
@@ -87,12 +131,19 @@ opencv-python==4.11.0.86
     # via -r requirements.in
 opencv-python-headless==4.11.0.86
     # via rembg
+opt-einsum==3.4.0
+    # via tensorflow
+optree==0.14.1
+    # via keras
 packaging==24.2
     # via
+    #   keras
     #   lazy-loader
     #   onnxruntime
     #   pooch
     #   scikit-image
+    #   tensorboard
+    #   tensorflow
 pillow==11.1.0
     # via
     #   imageio
@@ -106,12 +157,17 @@ platformdirs==4.3.7
     # via pooch
 pooch==1.8.2
     # via rembg
-protobuf==6.30.1
-    # via onnxruntime
+protobuf==5.29.4
+    # via
+    #   onnxruntime
+    #   tensorboard
+    #   tensorflow
 pydantic==2.10.6
     # via fastapi
 pydantic-core==2.27.2
     # via pydantic
+pygments==2.19.1
+    # via rich
 pymatting==1.1.13
     # via rembg
 pyreadline3==3.5.4
@@ -126,6 +182,9 @@ requests==2.32.3
     # via
     #   pooch
     #   stripe
+    #   tensorflow
+rich==13.9.4
+    # via keras
 rpds-py==0.23.1
     # via
     #   jsonschema
@@ -137,6 +196,12 @@ scipy==1.15.2
     #   pymatting
     #   rembg
     #   scikit-image
+six==1.17.0
+    # via
+    #   astunparse
+    #   google-pasta
+    #   tensorboard
+    #   tensorflow
 sniffio==1.3.1
     # via anyio
 starlette==0.46.1
@@ -147,6 +212,16 @@ sympy==1.13.1
     # via
     #   onnxruntime
     #   torch
+tensorboard==2.19.0
+    # via tensorflow
+tensorboard-data-server==0.7.2
+    # via tensorboard
+tensorflow==2.19.0
+    # via -r requirements.in
+tensorflow-io-gcs-filesystem==0.31.0
+    # via tensorflow
+termcolor==2.5.0
+    # via tensorflow
 tifffile==2025.3.13
     # via scikit-image
 torch==2.6.0
@@ -157,12 +232,23 @@ typing-extensions==4.12.2
     # via
     #   anyio
     #   fastapi
+    #   optree
     #   pydantic
     #   pydantic-core
     #   referencing
     #   stripe
+    #   tensorflow
     #   torch
 urllib3==2.3.0
     # via requests
 uvicorn==0.34.0
     # via -r requirements.in
+werkzeug==3.1.3
+    # via tensorboard
+wheel==0.45.1
+    # via astunparse
+wrapt==1.17.2
+    # via tensorflow
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
